--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "cool-ascii-faces": "^1.3.4",
     "ejs": "^2.5.6",
     "express": "^4.15.2"
   },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/heroku/node-js-getting-started"
